# dashboard

./: .gitignore  .npmrc  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
api/: alembic.ini  docker-compose.test.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 26a18716da5f_initial_schema.py
api/app/: config.py  logging_events.py  main.py
api/app/db/: engine.py  errors.py  models.py  secrets.py
api/app/dependencies/: database.py  tenant.py
api/app/middleware/: auth.py  maintenance.py  rate_limit.py  request_log.py
api/app/models/: billing_config.py  business_config.py
api/app/routes/: activation.py  billing.py  calls.py  events.py  health.py  profile.py  recordings.py  register.py  setup.py
api/app/services/: call_list.py  notification.py  s3_keys.py  slug.py
api/scripts/: backfill_redis_to_pg.py
api/tests/: conftest.py  test_activation.py  test_auth_middleware.py  test_billing.py  test_call_detail.py  test_calls_list.py  test_health.py  test_health_extended.py  test_lifespan_db.py  test_maintenance.py  test_profile.py  test_rate_limit.py  test_recording_proxy.py  test_register.py  test_setup.py  test_sse.py  test_tenant_dependency.py
api/tests/db/: conftest.py  test_billing_repository.py  test_calls_repository.py  test_db_fixtures.py  test_engine.py  test_errors.py  test_models.py  test_secrets.py  test_tenant_config_repository.py
api/tests/fixtures/: billing_baseline.json  call_list_baseline.json
api/tests/integration/: conftest.py  test_billing_pg.py  test_call_list_pg.py  (+3 more)
(+104 files in other folders)
