[project]
name = "choka-dashboard-api"
version = "0.1.0"
description = "Choka Dashboard BFF — Backend for Frontend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "httpx>=0.27",
    "aioboto3>=13",
    "redis[asyncio]>=5.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "ruamel.yaml>=0.18",
    "zoneinfo>=0.2; python_version < '3.9'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
markers = [
    "performance: marks tests as performance benchmarks (deselect with '-m not performance')",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
